Copy C styling rather than redefining the styles
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5699 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  * data/filetypes.c, data/filetypes.vala, data/filetypes.Genie.conf,
    data/filetypes.Scala.conf:
    Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes.
+ * data/filetypes.Genie.conf:
+   Copy C styling rather than redefining the styles.
 
 
 2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
