Don't set font twice for line numbers and braces
No need to set the font for some specific styles that are set up anyway
when we set the font for all styles from 0 to STYLE_MAX.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5700 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    Highlight triple-quoted verbatims in Vala, Genie and Scala filtypes.
  * data/filetypes.Genie.conf:
    Copy C styling rather than redefining the styles.
+ * src/editor.c:
+   Don't set font twice for line numbers and braces.
 
 
 2011-04-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
