Add and use signal "document-reload" to the plugin API.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5703 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/editor.c:
    Ignore scrolling events in on_update_ui().
+ * src/geanyobject.c, src/plugindata.h, src/geanyobject.h,
+   src/document.c, doc/pluginsignals.c:
+   Add and use signal "document-reload" to the plugin API.
 
 
 2011-04-08  Colomban Wendling  <colomban(at)geany(dot)org>
