Refactor with filetypes_get_filename(). Make filetypes_get_conf_extension() static.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5708 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@
    Sierro, thanks).
    There's still a bug with loading a project at startup; closing the
    project doesn't restore old VTE path.
+ * src/filetypes.c, src/filetypes.h:
+   Refactor with filetypes_get_filename().
+   Make filetypes_get_conf_extension() static.
 
 
 2011-04-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
