Use brackets for DOC_FILENAME() macro 'doc' argument.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5719 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * src/document.c:
    Update dox for document_compare_by_display_name() with warning
    about parameter addresses.
+ * src/document.h:
+   Use brackets for DOC_FILENAME() macro 'doc' argument.
 
 
 2011-04-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
