Fix Ctrl-Shift-[CV] keybindings to work outside the VTE.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5722 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
  * src/templates.c, src/utils.c, src/toolbar.c, src/utils.h,
    src/keyfile.c, src/filetypes.c, src/editor.c, src/symbols.c:
    Make utils_build_path() return a copy for safety.
+ * src/keybindings.c:
+   Fix Ctrl-Shift-[CV] keybindings to work outside the VTE.
 
 
 2011-04-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
