Avoid triggering autocompletion on PHP open tags (closes #3199442)
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5724 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-04-13  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/editor.c:
+   Avoid triggering autocompletion on PHP open tags (closes #3199442).
+
+
 2011-04-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/document.c:
