Add function utils_string_replace() to replace in a fixed range. Remove utils_string_replace_helper() and update cursor marker code.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5726 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-04-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/utils.c, src/utils.h, src/editor.c:
+   Add function utils_string_replace() to replace in a fixed range.
+   Remove utils_string_replace_helper() and update cursor marker code.
+
+
 2011-04-14  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/editor.c:
