Add utils_string_find() to search in a fixed range. Change utils_string_replace() to just replace a fixed number of characters.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5730 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
    Fix multiple snippet cursor positions for Tabs + Spaces mode.
    Simplify editor_insert_snippet() code now we use cursor marker
    strings.
+ * src/utils.c, src/utils.h, src/editor.c:
+   Add utils_string_find() to search in a fixed range.
+   Change utils_string_replace() to just replace a fixed number of
+   characters.
 
 
 2011-04-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
