Replace dates on template insertion, not when loading templates.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5734 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    plugins/geanyfunctions.h:
    Add utils_find_open_xml_tag_pos() API function (patch by Eugene
    Arshinov, thanks).
+ * src/templates.c:
+   Replace dates on template insertion, not when loading templates.
 
 
 2011-04-19  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
