Make sure to update the tag list only for the current document
Fix idle tag list updating not to update the tag list if the current
document isn't the one to update anymore. In this case, mark the
document as needing an update and re-schedule an idle update next time
the document gets the focus.

This fixes updating the tag list after switching documents, which
resulted in displaying the wrong tag list.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5738 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-04-26  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/callbacks.c, src/document.c, src/document.h,
+   src/documentprivate.h, src/editor.c, src/sidebar.c:
+   Make sure to update the tag list only for the current document,
+   avoiding idle updates to show the tag list for the wrong document.
+
+
 2011-04-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/utils.c:
