Change Programming Languages filetype group label -> Compiled Languages. Use 'source file' title for custom filetypes.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5741 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,10 @@
    filetype_extensions.conf.
    Read filetype_extensions.conf when calling filetypes_init_types(),
    don't require doclist initialization.
+ * src/filetypes.c:
+   Change Programming Languages filetype group label -> Compiled
+   Languages.
+   Use 'source file' title for custom filetypes.
 
 
 2011-04-26  Colomban Wendling  <colomban(at)geany(dot)org>
