Remove Preferences label warning about restarting after editing template data - this is no longer necessary.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5743 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@
    Change Programming Languages filetype group label -> Compiled
    Languages.
    Use 'source file' title for custom filetypes.
+ * src/prefs.c, doc/geany.txt, doc/geany.html:
+   Remove Preferences label warning about restarting after editing
+   template data - this is no longer necessary.
 
 
 2011-04-26  Colomban Wendling  <colomban(at)geany(dot)org>
