Add section 'Filetype group membership'.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5750 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
  * src/filetypes.c, data/filetype_extensions.conf:
    Revert 'Compiled' filetype group back to 'Programming' (couldn't
    agree on whether e.g. Java is a compiled language).
+ * doc/geany.txt, doc/geany.html:
+   Add section 'Filetype group membership'.
 
 
 2011-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
