Read color scheme name and description for menu item label and tooltip (based on patch by Matthew Brush, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5751 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,10 @@
    agree on whether e.g. Java is a compiled language).
  * doc/geany.txt, doc/geany.html:
    Add section 'Filetype group membership'.
+ * src/highlighting.c, doc/geany.txt, doc/geany.html,
+   data/colorschemes/alt.conf:
+   Read color scheme name and description for menu item label and
+   tooltip (based on patch by Matthew Brush, thanks).
 
 
 2011-04-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
