Use project patterns in the FIF dialog
User can now select what kind of file patterns should be used:
 * all: all files are searched
 * project: project patterns are used (only if a project is open)
 * custom: manually entered custom patterns are used

Based on a patch by Jiří Techet, thanks.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5753 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * src/project.c:
    Fix project patterns and make them visible (based on a patch
    by Jiří Techet, thanks).
+ * src/search.c:
+   Use project patterns in the FIF dialog (based on a patch
+   by Jiří Techet, thanks).
 
 
 2011-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
