Open the file in the msgwindow even if no line number is specified
Plugins may need to open a file from the message window without
specifying the line number, so allow messages of the form:

file[:line[...]]

For instance, all the following are now correctly parsed and the
corresponding file is opened:

/path/to/file
/path/to/file:line
/path/to/file: something not a line
/path/to/file:line: something
/path/to/file:line something

etc.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5754 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  * src/search.c:
    Use project patterns in the FIF dialog (based on a patch
    by Jiří Techet, thanks).
+ * src/msgwindow.c:
+   Open the file in the msgwindow even if no line number is specified.
 
 
 2011-04-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
