Fix pattern filtering when not searching in subdirectories
grep's --include option doesn't filter files passed explicitly to grep,
so when we build the file list to search in, take the filters into
account.
Also drop the --include options in this case since they aren't useful.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5755 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-01  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/search.c:
+   Fix pattern filtering when not searching in subdirectories.
+
+
 2011-04-30  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/project.c:
