--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-02  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/plugindata.h:
+   Bump plugin API version so a plugin can know the project file
+   patterns are visible by the user.
+
+
 2011-05-01  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/search.c:
