Allow translations for color scheme [theme_info] keys.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5757 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
+
+ * src/highlighting.c, doc/geany.txt, doc/geany.html:
+   Allow translations for color scheme [theme_info] keys.
+
+
 2011-05-02  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/plugindata.h:
