Save filetype build commands straight after editing them instead of at shutdown (patch by Dimitar Zhekov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5758 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/highlighting.c, doc/geany.txt, doc/geany.html:
    Allow translations for color scheme [theme_info] keys.
+ * src/build.c, src/filetypes.c, src/filetypes.h, src/main.c:
+   Save filetype build commands straight after editing them instead of
+   at shutdown (patch by Dimitar Zhekov, thanks).
 
 
 2011-05-02  Colomban Wendling  <colomban(at)geany(dot)org>
