--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-03  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * doc/geany.txt, doc/geany.html:
+   Update the documentation for project patterns and recent FIF dialog
+   changes.
+
+
 2011-05-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/highlighting.c, doc/geany.txt, doc/geany.html:
