--- a/HACKING
+++ b/HACKING
@@ -126,6 +126,15 @@ installed on the system.
 You can download Glade 2.12.2 here:
 http://download.geany.org/glade-2.12.2.tar.gz
 
+On recent GTK versions, you need a small patch to make it compile.
+You can get the patch from:
+http://download.geany.org/glade-2.12.2-build-fixes.patch
+
+And then simply apply it like so::
+
+    $ /tmp/glade-2.12.2% patch -p1 < glade-2.12.2-build-fixes.patch
+
+
 GTK API documentation
 ---------------------
 The official GTK 2.8 API documentation is not available online anymore,
