--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
+   win32-config.h, wscript:
+   Version bump for Geany 0.20.1.
+
+
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * New release: Geany 0.20 "Disra".
