Welcome Colomban Wendling, a new Geany developer.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5766 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
    Version bump for Geany 0.20.1.
  * *.*:
    Update copyright information.
+ * AUTHORS, src/about.c, README.Packagers, README:
+   Welcome Colomban Wendling, a new Geany developer.
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
