Ensure the editor widget has the focus when the editor menu is called.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5767 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
    Update copyright information.
  * AUTHORS, src/about.c, README.Packagers, README:
    Welcome Colomban Wendling, a new Geany developer.
+ * src/editor.c:
+   Ensure the editor widget has the focus when the editor menu is
+   called.
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
