Fix memory leaks (reported by an anonymous IRC user).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5768 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
  * src/editor.c:
    Ensure the editor widget has the focus when the editor menu is
    called.
+ * tagmanager/php.c:
+   Fix memory leaks (reported by an anonymous IRC user).
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
