Improve error checking when trying to write project files (patch by Colomban Wendling, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5769 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,9 @@
    called.
  * tagmanager/php.c:
    Fix memory leaks (reported by an anonymous IRC user).
+ * src/project.c:
+   Improve error checking when trying to write project files
+   (patch by Colomban Wendling, thanks).
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
