Fix wrong warning on empty backup directory setting if 'Backup Copy' is not enabled at all.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5771 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,9 @@
    Improve error checking when trying to write project files
    (patch by Colomban Wendling, thanks).
    Add a warning if writing the project file fails on close.
+ * plugins/saveactions.c:
+   Fix wrong warning on empty backup directory setting if
+   'Backup Copy' is not enabled at all.
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
