Fix off-by-one bug which hidden the last empty line of a document.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5772 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,8 @@
  * plugins/saveactions.c:
    Fix wrong warning on empty backup directory setting if
    'Backup Copy' is not enabled at all.
+ * plugins/export.c:
+   Fix off-by-one bug which hidden the last empty line of a document.
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
