--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,8 @@
    'Backup Copy' is not enabled at all.
  * plugins/export.c:
    Fix off-by-one bug which hidden the last empty line of a document.
+ * data/filetype_extensions.conf:
+   Add Markdown extension.
 
 
 2011-01-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
