--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/sidebar.c:
    Don't remove and add the symbols tree view if we re-add the same one.
+ * tagmanager/c.c:
+   Plug a memory leak.
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
