When sorting tags by line, also sort by scope if line is the same
This avoids wrong sorting, and then wrong display in the symbols list,
if a parent tag is on the same line than its children, and one of it's
children would be sorted before alphabetically (closes #3193982).

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5780 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@
    Don't remove and add the symbols tree view if we re-add the same one.
  * tagmanager/c.c:
    Plug a memory leak.
+ * src/symbols.c:
+   When sorting tags by line, also sort by scope if line is the same, avoiding
+   wrong sorting if a parent tag is on the same line than its children, and one
+   of it's children would be sorted before alphabetically (closes #3193982).
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
