--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,9 @@
    When sorting tags by line, also sort by scope if line is the same, avoiding
    wrong sorting if a parent tag is on the same line than its children, and one
    of it's children would be sorted before alphabetically (closes #3193982).
+ * src/toolbar.c:
+   Correctly expand the menubar if the toolbar is appended to it but
+   not visible (closes #3204955).
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
