Properly use 0 as the invalid timeout source ID, rather than G_MAXUINT
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5789 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,8 @@
    the actual job in IDLE callbacks for the TreeView's handler to have run.
  * doc/pluginsymbols.c, src/sciwrappers.c:
    Fix a few Doxygen warnings.
+ * plugins/saveactions.c:
+   Properly use 0 as the invalid timeout source ID.
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
