Update regex for encoding detection to match quoted names
This allows encoding="utf8", adding support for XML encoding detection.

Closes #3183506.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5790 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -28,6 +28,9 @@
    Fix a few Doxygen warnings.
  * plugins/saveactions.c:
    Properly use 0 as the invalid timeout source ID.
+ * src/encodings.c:
+   Update regex used to find encodings for it to allow the encoding to
+   be quoted, adding support for XML (closes #3183506).
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
