Fix loading and updating menu accelerators for custom commands
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5791 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,8 @@
  * src/encodings.c:
    Update regex used to find encodings for it to allow the encoding to
    be quoted, adding support for XML (closes #3183506).
+ * src/main.c, src/prefs.c, src/tools.c:
+   Fix loading and updating menu accelerators for custom commands.
 
 
 2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
