Cleanup GeanyWrapLabel a bit
 * Do all mandatory initializations in _init() rather than _new();
 * Drop geany_wrap_label_set_text() in favor of plain
   gtk_label_set_text(), making the widget a little simpler and more
   transparent to the caller.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5795 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
  * src/plugins.c:
    Improve the plugin manager dialog a little.
+ * src/geanywraplabel.c, src/geanywraplabel.h, src/keybindings.c,
+   src/plugins.c:
+   Cleanup GeanyWrapLabel a bit.
 
 
 2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
