Update the HTML encoding detection regex to accept more valid inputs
HTML 4.01 don't seem to require the http-equiv value to be quoted, so
make the quotes optional.
Also allow more than one space between the meta tag and its http-equiv
attribute.

Closes #3300703.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5796 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/encodings.c:
+   Update the HTML content-type encoding detection regexp to accept some
+   more valid inputs (closes #3300703).
+
+
 2011-05-11  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/plugins.c:
