Update of Slovenian translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5798 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
+
+
 2011-04-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sv.po: Update of Swedish translation. Thanks to Tony Mattsson for
