--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/about.c, src/build.c, tagmanager/tm_workspace.c:
+   Remove unused variables (patch by Eugene Arshinov, thanks).
+
+
 2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/encodings.c:
