Add old, missed ChangeLog entry, oops
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5813 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,6 +29,13 @@
    Enable SplitWindow build on Windows again (re-apply Enrico's patch).
 
 
+2011-05-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * HACKING:
+   Add note about patching Glade 2.12 to compile it with
+   newer GTK versions.
+
+
 2011-05-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
 
  * src/callbacks.c:
