Do not allow 'Save All' even if 'allow_always_save' is set (patch by Dimitar Zhekov, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5815 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Remove unused variables (patch by Eugene Arshinov, thanks).
  * src/stash.c:
    Remove unused variables (suggested by Eugene Arshinov).
+ * src/ui_utils.c, doc/geany.txt, doc/geany.html:
+   Do not allow 'Save All' even if 'allow_always_save' is set
+   (patch by Dimitar Zhekov, thanks).
 
 
 2011-05-12  Colomban Wendling  <colomban(at)geany(dot)org>
