--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-22  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * tagmanager/makefile.win32:
+   Replace escape character '\' by slash '/' in paths in the
+   Windows Makefiles (patch by Matthew Brush, thanks).
+
+
 2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/sidebar.c:
