Add 'enum' to secondary keywords (closes #3305737, patch by Matthew Brush, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/branches/0.20.1@5818 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * tagmanager/makefile.win32:
    Replace escape character '\' by slash '/' in paths in the
    Windows Makefiles (patch by Matthew Brush, thanks).
+ * data/filetypes.java:
+   Add 'enum' to secondary keywords
+   (closes #3305737, patch by Matthew Brush, thanks).
 
 
 2011-05-09  Colomban Wendling  <colomban(at)geany(dot)org>
