--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
+
+
 2011-05-17  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
