When checking for literal strings to ignore, consider also unicode, binary and raw strings.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5821 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2011-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * tagmanager/python.c:
+   When checking for literal strings to ignore, consider also
+   unicode, binary and raw strings.
+
+
 2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/prefs.c:
