Define and use get_plugin_path() always and move platform dependent code into the function definition.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5822 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
  * tagmanager/python.c:
    When checking for literal strings to ignore, consider also
    unicode, binary and raw strings.
+ * src/plugins.c:
+   Define and use get_plugin_path() always and move platform dependent
+   code into the function definition.
 
 
 2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>
