Do not add active plugins to the list of plugins when they are already in the list (closes #3308191).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5824 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  * src/plugins.c:
    Define and use get_plugin_path() always and move platform dependent
    code into the function definition.
+   Do not add active plugins to the list of plugins when they are
+   already in the list (closes #3308191).
 
 
 2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>
