--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
    code into the function definition.
    Do not add active plugins to the list of plugins when they are
    already in the list (closes #3308191).
+   Check whether the custom plugin path is one of the user or system
+   plugin paths and if so, ignore it.
 
 
 2011-05-27  Colomban Wendling  <colomban(at)geany(dot)org>
