--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-05-29  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * fr.po: Update of French translation.
+
+
 2011-05-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * sl.po: Update of Slovenian translation. Thanks to Jože Klepec.
