Move keyword 'enum' to primary keywords (closes #3305737).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5827 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetypes.java:
+   Move keyword 'enum' to primary keywords (closes #3305737).
+
+
 2011-05-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * tagmanager/python.c:
