--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
  * src/document.c, src/document.h, src/ui_utils.c, src/ui_utils.h:
    Add ui_focus_current_document() and document_grab_focus().
+ * src/project.c:
+   Focus the editor widget after loading project session files.
 
 
 2011-05-30  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
