Fix a very old typo
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5830 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -6278,7 +6278,7 @@ Configurable Build Menu Changes
    display the right amount of matches.
    Fix the display of the matches once per line (I broke the original
    patch).
- * src/ui_uitls.c:
+ * src/ui_utils.c:
    Fix wrong directory selection behaviour in all Open Folder dialogs
    (closes #2688020, patch by Marcel Stimberg, thanks).
  * src/socket.c:
