Also use the actual user search in the combo box history
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5833 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    src/search.c, src/search.h:
    Show the actual text the user searched for in messages rather than
    the internal one (patch by Eugene Arshinov, thanks).
+ * src/search.c:
+   Also use the actual user search in the combo box history.
 
 
 2011-06-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
