--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-04-06  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
+
+ * nl.po: Update of Dutch translation, updated latest changes.
+
+
 2011-05-29  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * fr.po: Update of French translation.
