--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2011-06-07  Frank Lanitz  <frlan@frank.uvena.de>
+
+ * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.
+
+
 2011-04-06  Peter Scholtens  <peter(dot)scholtens(at)xs4all(dot)nl>
 
  * nl.po: Update of Dutch translation, updated latest changes.
