Always destroy open and save dialog after use
Create and destroy the file open/save dialogs on each call rather than
keeping the same dialog around.  This avoids letting GTK monitor the
displayed directory for changes, thus probably reducing overhead and
works around GTK monitoring bugs.

This refactors the code a bit now it works a little differently.

Also fixes a bug that made dialogs_show_save_as() wrongly return the
first user response rather than the one that is actually used to make
the decision.  It happened for example when the user first selected an
non-writable location, or was asked whether to override a file and
answered "no".

Closes/references:
https://sourceforge.net/tracker/?func=detail&aid=3311687&group_id=153444&atid=787793
https://sourceforge.net/tracker/?func=detail&aid=3311258&group_id=153444&atid=787791
https://sourceforge.net/tracker/?func=detail&aid=3304273&group_id=153444&atid=787791
https://sourceforge.net/tracker/?func=detail&aid=3201050&group_id=153444&atid=787791
https://sourceforge.net/tracker/?func=detail&aid=3163742&group_id=153444&atid=787791
https://sourceforge.net/tracker/?func=detail&aid=3153120&group_id=153444&atid=787791
https://sourceforge.net/tracker/?func=detail&aid=2985896&group_id=153444&atid=787791
https://bugs.launchpad.net/ubuntu/+source/geany/+bug/754577

Dialog state restoration based on a patch by Matthew Brush, thanks.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5837 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/dialogs.c, src/main.c, src/ui_utils.h:
+   Always destroy open and save dialog after use. This also helps
+   working around a long-living GTK+ bug, hopefully closing #3311258,
+   #3304273, #3201050, #3163742, #3153120 and #2985896.
+
+
 2011-06-03  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/callbacks.c, src/document.c, src/document.h, src/editor.c,
