Fix Printing preferences page alignment
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5844 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,8 @@
    Enable GTK printing support unconditionally.
  * doc/geany.html, doc/geany.txt:
    Stop talking about pre-GTK 2.12 tricks.
+ * geany.glade, src/interface.c:
+   Fix Printing preferences page alignment.
 
 
 2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>
