Remove checks for the GSlice allocator, use it unconditionally
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5849 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,9 @@
    Fix Printing preferences page alignment.
  * src/notebook.c:
    Remove pre-GTK 2.10 tab DnD support.
+ * src/pluginutils.c, tagmanager/tm_file_entry.c,
+   tagmanager/tm_symbol.c, tagmanager/tm_tag.c:
+   Unconditionally use GSlice allocator.
 
 
 2011-06-11  Colomban Wendling  <colomban(at)geany(dot)org>
