--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-06-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * data/filetypes.python:
+   Add Cython keywords.
+
+
 2011-06-13  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * configure.ac, src/Makefile.am, src/makefile.win32, wscript:
