Fix two bugs with triple quoted strings within comments and missing indentation within triple quoted strings (#3316966, synced from CTags SVN, patch by Elias Pschernig, thanks).
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5851 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2011-06-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * tagmanager/python.c:
+   Fix two bugs with triple quoted strings within comments
+   and missing indentation within triple quoted strings
+   (#3316966, synced from CTags SVN, patch by Elias Pschernig, thanks).
+
+
 2011-06-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * data/filetypes.python:
