Make StashWidgetID map to gconstpointer rather than gpointer
This allows to use constant strings (e.g. string literals) as the
widget ID without triggering tons of compiler warnings.  In cases
widgets or non-constant strings are used, this just don't change
anything, since anyway we don't really need the widget pointer not
to be constant.

git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5857 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,9 @@
    Remove support of size being -1 in document_open_file_list().
  * src/utils.c src/utils.h:
    Remove support of size being -1 in utils_get_line_endings().
+ * src/stash.c, src/stash.h:
+   Make StashWidgetID map to gconstpointer, allowing use of const
+   strings as the widget key.
 
 
 2011-06-16  Colomban Wendling  <colomban(at)geany(dot)org>
