Update of Spanish translation
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5858 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-06-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * es.po: Update of Spanish transaltion. Thanks to Lucas Vieites
+          for providing the update.
+
+
 2011-06-07  Frank Lanitz  <frlan@frank.uvena.de>
 
  * tr.po: Update of Turkish translation. Thanks to Gürkan Gür.
