Update of French translation. Thanks to Benjamin Ballet.
git-svn-id: https://geany.svn.sourceforge.net/svnroot/geany/trunk@5866 ea778897-0a13-0410-b9d1-a72fbfd435f5

--- a/THANKS
+++ b/THANKS
@@ -114,6 +114,7 @@ Jari Rahkonen <jari(dot)rahkonen(at)pp1(dot)inet(dot)fi> - fi
 Jean-Philippe Moal <skateinmars(at)skateinmars(dot)net> - fr
 Roland Baudin <roland(dot)baudin(at)thalesaleniaspace(dot)com> - fr
 Lionel Fuentes <funto66(at)gmail(dot)com> - fr
+Benjamin Ballet <benjamin(dot)ballet(at)gmail(dot)com -fr
 José Manuel Castroagudín Silva <chavescesures(at)mail(dot)com> - gl
 Gabor Kmetyko aka kilo <kg_kilo(at)freemail(dot)hu> - hu
 M.Baldinelli <m(dot)baldinelli(at)agora(dot)it> - it
