--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2011-07-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
+
+ * fr.po: Update of French translation. Thanks to Benjamin Ballet for
+          updating.
+
+
 2011-06-18  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>
 
  * es.po: Update of Spanish transaltion. Thanks to Lucas Vieites
